fix overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -44,8 +44,7 @@ header {
 }
 
 .logo {
-  position: relative;
-  left: 20px;
+  margin-left: 20px;
 }
 
 .logo a {
